--- a/src/app/components/cancion/cancion.component.html
+++ b/src/app/components/cancion/cancion.component.html
@@ -1,30 +1,4 @@
-<mat-card
-  *ngIf="!cancion" class="details-card-empty mat-elevation-z0"
->
-</mat-card>
-
-<mat-card *ngIf="cancion && edit" class="details-card mat-elevation-z0">
-  <mat-card-header>
-    <mat-card-title>{{ cancion.name }}</mat-card-title>
-  </mat-card-header>
-  <img
-    mat-card-image
-    src="{{ cancion.artworkUrl }}"
-    alt="Portada del álbum {{ cancion.collectionName }}"
-  />
-  <mat-card-content>
-    <h3>{{ cancion.collectionName }}</h3>
-    <p>{{ cancion.artistName }}</p>
-    <p>{{ cancion.releaseDate | date: "yyyy" }}</p>
-    <p>{{ cancion.duration | date: "mm:ss" }}</p>
-    <mat-chip-list>
-      <mat-chip *ngFor="let genre of cancion.genres; last as isLast">
-        {{ genre.name }}
-      </mat-chip>
-    </mat-chip-list>
-    <p>{{ cancion.copyright }}</p>
-  </mat-card-content>
-  <button (click)="edit=!edit">volver</button>
+<mat-card *ngIf="!cancion" class="details-card-empty mat-elevation-z0">
 </mat-card>
 
 <mat-card *ngIf="cancion && !edit" class="details-card mat-elevation-z0">
@@ -48,5 +22,46 @@
     </mat-chip-list>
     <p>{{ cancion.copyright }}</p>
   </mat-card-content>
-  <button (click)="edit=!edit">editar</button>
+  <button mat-stroked-button (click)="editCancion(cancion); edit = !edit">
+    editar
+  </button>
+</mat-card>
+
+<mat-card *ngIf="cancion && edit" class="details-card mat-elevation-z0">
+  <mat-card-header>
+    <mat-card-title>{{ cancion.name }}</mat-card-title>
+  </mat-card-header>
+  <img
+    mat-card-image
+    src="{{ cancion.artworkUrl }}"
+    alt="Portada del álbum {{ cancion.collectionName }}"
+  />
+  <mat-card-content>
+    <h3>{{ cancion.collectionName }}</h3>
+    <mat-form-field class="example-full-width">
+      <input
+        matInput
+        placeholder="Nombre del artista"
+        value="{{ cancion.artistName }}"
+      />
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>{{ startDate | date: "dd/MM/yyyy" }}</mat-label>
+      <input matInput [matDatepicker]="picker" />
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker
+        #picker
+        value="startDate"
+        [startAt]="startDate"
+      ></mat-datepicker>
+    </mat-form-field>
+    <mat-slide-toggle [checked]="cancion.contentAdvisoryRating">
+      Contenido Explícito
+    </mat-slide-toggle>
+    <mat-form-field class="example-full-width">
+      <mat-label>Copyright</mat-label>
+      <textarea matInput>{{ cancion.copyright }}</textarea>
+    </mat-form-field>
+  </mat-card-content>
+  <button mat-stroked-button (click)="edit = !edit">guardar</button>
 </mat-card>
