--- a/src/app/components/canciones/canciones.component.html
+++ b/src/app/components/canciones/canciones.component.html
@@ -24,7 +24,8 @@
       <mat-card-content>
         <p *ngIf="!isFiltered">{{ canciones?.length }} canciones</p>
         <p *ngIf="isFiltered">
-          {{ filteredResults }} resultado{{ filteredResults > 1 ? "s" : "" }} para
+          {{ filteredResults }} resultado{{ filteredResults != 1 ? "s" : "" }}
+          para
           {{ dataSource.filter }}
         </p>
       </mat-card-content>
@@ -45,16 +46,15 @@
       'border-radius': '5px',
       height: '50px'
     }"
-></ngx-skeleton-loader>
+  ></ngx-skeleton-loader>
 
   <table
-    *ngIf="cargado"
     mat-table
     [dataSource]="dataSource"
     class="full-width-table"
     matSort
-    aria-label="Elements">
-
+    aria-label="Elements"
+  >
     <!-- No hay canciones -->
     <ng-container>
       <tr>
@@ -71,7 +71,9 @@
 
     <!-- Columna posicion -->
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header><strong>#</strong></th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        <strong>#</strong>
+      </th>
       <td mat-cell *matCellDef="let cancion">
         <span *ngIf="!cancion.muestraPlay && cancionActual != cancion.id">{{
           cancion.id
@@ -86,7 +88,9 @@
 
     <!-- Columna Canción -->
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header><strong>CANCIÓN</strong></th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        <strong>CANCIÓN</strong>
+      </th>
       <td
         mat-cell
         *matCellDef="let cancion; let i = index"
@@ -106,7 +110,9 @@
 
     <!-- Columna Álbum -->
     <ng-container matColumnDef="collectionName">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header><strong>ÁLBUM</strong></th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        <strong>ÁLBUM</strong>
+      </th>
       <td
         mat-cell
         *matCellDef="let cancion; let i = index"
